--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -1,9 +1,16 @@
 {
-  "en": "English",
-  "ru": "Russian",
-  "change_locale": "Change Language",
-  "current_locale": "Current locale",
-  "companies_built": "Companies Built",
-  "know_more": "Know more",
-  "our_services": "Our Services"
+	"en": "English",
+	"ru": "Russian",
+	"change_locale": "Change Language",
+	"current_locale": "Current locale",
+	"companies_built": "Companies Built",
+	"know_more": "Know more",
+	"our_services": "Our Services",
+	"page_not_found": "Page Not Found",
+	"go_back_home": "Go back home",
+	"project_facts": "Project Facts",
+	"cortex_role": "Cortex Role",
+	"business_goals": "Business Goals",
+	"technologies": "Technologies",
+	"development_timeline": "Development Timeline"
 }
