--- a/frontend/public/locales/ru/common.json
+++ b/frontend/public/locales/ru/common.json
@@ -1,9 +1,16 @@
 {
-    "en": "Английский",
-    "ru": "Русский",
-    "change_locale": "Изменить язык",
-    "current_locale": "Текущий язык",
-    "companies_built": "Компании",
-    "know_more": "Подробнее",
-    "our_services": "Наш Сервис"
-  }
+	"en": "Английский",
+	"ru": "Русский",
+	"change_locale": "Изменить язык",
+	"current_locale": "Текущий язык",
+	"companies_built": "Компании",
+	"know_more": "Подробнее",
+	"our_services": "Наш Сервис",
+	"page_not_found": "Страница не найдена",
+	"go_back_home": "Вернуться на главную",
+	"project_facts": "Факты о Проекте",
+	"cortex_role": "Роль Кортекс",
+	"business_goals": "Бизнес Цели",
+	"technologies": "Технологии",
+	"development_timeline": "Хронология разработки"
+ }
