--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -6,6 +6,10 @@
 	"companies_built": "Companies Built",
 	"know_more": "Know more",
 	"our_services": "Our Services",
+	"why_us": "Why Us",
+	"our_focus": "Our Focus",
+	"our_achievements": "Our Achievements",
+	"clients_say": "Clients Say",
 	"page_not_found": "Page Not Found",
 	"go_back_home": "Go back home",
 	"project_facts": "Project Facts",
