--- a/frontend/public/locales/ru/common.json
+++ b/frontend/public/locales/ru/common.json
@@ -6,6 +6,10 @@
 	"companies_built": "Компании",
 	"know_more": "Подробнее",
 	"our_services": "Наш Сервис",
+	"why_us": "Почему Мы",
+	"our_focus": "Наша Цель",
+	"our_achievements": "Наши достижения",
+	"clients_say": "Отзывы клиентов",
 	"page_not_found": "Страница не найдена",
 	"go_back_home": "Вернуться на главную",
 	"project_facts": "Факты о Проекте",
