--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -17,5 +17,7 @@
 	"cortex_role": "Cortex Role",
 	"business_goals": "Business Goals",
 	"technologies": "Technologies",
-	"development_timeline": "Development Timeline"
+	"development_timeline": "Development Timeline",
+	"landing": "Landing",
+	"privacy_policy": "Privacy Policy"
 }
