--- a/frontend/public/locales/ru/common.json
+++ b/frontend/public/locales/ru/common.json
@@ -17,5 +17,7 @@
 	"cortex_role": "Роль Кортекс",
 	"business_goals": "Бизнес Цели",
 	"technologies": "Технологии",
-	"development_timeline": "Хронология разработки"
+	"development_timeline": "Хронология разработки",
+	"landing": "Лэндинг",
+	"privacy_policy": "Полтика конфиденциальности"
  }
