--- a/frontend_new/src/i18n/locales/en/common.json
+++ b/frontend_new/src/i18n/locales/en/common.json
@@ -4,7 +4,7 @@
 	    "ru": "Russian"
     },
     "heading": {
-        "cortex": "Cortex"
+        "cortex": "Cortex Technology"
     },
     "control": {
         "know_more": "Know more"
